# clean-server-requests

./: .gitignore  Cargo.toml  LICENSE  README.md
csr-client/: Cargo.toml
csr-client/src/: game.rs  main.rs
csr-protocol/: Cargo.toml  build.rs
csr-protocol/protos/: csr.proto
csr-protocol/src/: client.rs  error.rs  event.rs  lib.rs  server.rs  types.rs
csr-server/: Cargo.toml
csr-server/src/: error.rs  main.rs  service.rs
protos/: csr.proto
